test/tests/compiler/12_unsigned_integers/invalid_types/conflicting_signed_unsigned.plx
#  Cannot declare x as both signed int and unsigned int 

pub x: u32;

pub x: i32;

pub fn main(none) i32 {
    return 0
}
